//
// Copyright 2015, TeamDev Ltd. All rights reserved.
//
// Redistribution and use in source and/or binary forms, with or without
// modification, must retain the above copyright notice and the following
// disclaimer.
//
// THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
// "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
// LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
// A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
// OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
// SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
// LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
// DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
// THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
// (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
// OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
//
syntax = "proto3";

package spine.client;

option java_generate_equals_and_hash = true;
option java_multiple_files = true;
option java_outer_classname = "CommandResponseProto";
option java_package = "org.spine3.client";

import public "google/protobuf/empty.proto";
import public "spine/base/error.proto";

// The result of passing CommandRequest to the service.
message CommandResponse {
    oneof value {
        // The command was accepted to execution.
        //
        // Results of the command execution (if any) would be delivered via event stream.
        google.protobuf.Empty ok = 1;

        // The error occurred upon receiving the request.
        //
        // The nature of the error is defined by one of the values defined in `ErrorCode` enum stored
        // in the `Error.code` field.
        spine.base.Error error = 2;
    }

    // Possible error cases.
    enum ErrorCode {
        // Reserved value.
        UNKNOWN = 0;

        // The command type is not supported by the server.
        UNSUPPORTED_COMMAND = 1;

        // The command is supported but not all fields are complete.
        INCOMPLETE_COMMAND = 2;

        // The command context does not have `namespace` attribute defined in a multitenant application.
        NAMESPACE_UNKNOWN = 3;
    }
}

